--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
   "devDependencies": {
     "css-loader": "^1.0.0",
     "dart-sass": "^1.14.1",
+    "file-loader": "^2.0.0",
     "html-webpack-plugin": "^4.0.0-beta.1",
+    "img-loader": "^3.0.0",
     "sass-loader": "^7.1.0",
-    "style-loader": "^0.23.0"
+    "style-loader": "^0.23.0",
+    "url-loader": "^1.1.1"
   }
 }
